syntax = "proto3";

package locations;


service Locations {
  rpc getLocation (GetLocationRequest) returns (GetLocationReply) {}
  rpc findLocations (FindLocationsRequest) returns (FindLocationsReply) {}
}

message LocationsRes {
  message Geolocation {
    double latitude = 1;
    double longitude = 2;
  }
  string id = 1;
  string address_1 = 2;
  string address_2 = 3;
  string city = 4;
  string postcode = 5;
  string region = 6;
  string country = 7;
  optional Geolocation geolocation = 8;
}

// The request message containing single location id
message GetLocationRequest {
  string id = 1;
}

// The response message containing result of requested Locations
message GetLocationReply {
  LocationsRes location = 1;
}

// The request message containing parameters for querying locations
message FindLocationsRequest {
  message Location {
    string country = 1;
    string city = 2;
  }
  
  Location location = 2;
}

// The response message containing result of requested Locations
message FindLocationsReply {
  repeated LocationsRes locations = 1;
}
